@@ -1,3 +1,4 @@
+10-may-2010 - ugetab - Added gui.getpixel() which gets any gui.pixel() set pixel colors, and possibly other functions. Added emu.getscreenpixel() which gets the RGB and Palette of any pixel on the screen.
 08-may-2010 - ugetab - Added savestate.object() which is savestate.create() with intuitive numbering under windows
 08-may-2010 - ugetab - Added emu.addgamegenie() and emu.delgamegenie() LUA functions.
 07-may-2010 - ugetab - Win32 - Added context menu to Cheat Dialog Cheat Listbox, populated list with Toggle Cheat, Poke Cheat Value, and Goto In Hex Editor
